[+] plxToken and plxCapcha optimisations #406 (bazooka07)
FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)
FIX Error when adding or modifying a user #393 (P3ter)
FIX Alternative to PHPMailer with sendmail #401 (bazooka07)
FIX Used of an extern URL as a static page #403 (bazooka07)

## PLUXML 5.8.2 (2020/02/09) ##
[+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
FIX #365 plxUtils::getLangs() optimisations (bazooka07)
FIX #367 plxUtils::sendmail() minor correction (bazooka07)
FIX #369 Comments indentation does not work on frontend (P3ter)
FIX #372 [i18n] missing L_CONFIG_ADVANCED_LOSTPASSWORD in oc, es, pl, pt, ro, ru, it (P3ter)
FIX #378 Add UTF-8 to plxUtils::urlify() (bazooka07)

## PLUXML 5.8.1 (sortie : 07/01/2020) ##
FIX #360 Undefined index: password_token
FIX #361 Use of undefined constant PLX_TEMPLATES
FIX #362 Uncaught Error: Class 'PlxTemplate' not found
FIX #363 Notice: Undefined index: name
FIX #364 warning messages and use browser language

## PLUXML 5.8 (sortie : 05/01/2020) ##
[+] PluCSS 1.3.1
[+] Feature "Mot de passe oublié" : envoi d'un lien par mail permettant la création d'un nouveau mot de passe (P3ter)
[+] Feature "Mot de passe oublié" : l'adresse e-mail devient obligatoire à l'installation de PluXml et à la création d'un utilisateur (P3ter)
[+] Ajout de la translitteration des URLs des articles, des pages et des médias pour le Russe, le Polonais, le Roumain et l'Allemand (bazooka07, P3ter)
[+] Thème par défaut : ajout du titre et du sous-titre sur mobile, modification des breakpoints et de la largeur des bords, modification de l'entête (P3ter, sudwebdesign)
[+] Amélioration des performances du gestionnaire de médias (bazooka07)
[+] Les modifications sur les profils utilisateurs sont immédiatement visibles, inutile de se re-connecter (sudwebdesign)