@@ -87,19 +87,19 @@ if(!empty($_GET['a'])) {
 	$h2 = '<h2>'.L_COMMENTS_ALL_LIST.'</h2>';
 }
 elseif($comSel=='online') {
-	$comSelMotif = '/^[0-9]{4}.(.*).xml$/';
+	$comSelMotif = '/^\d{4}.(.*).xml$/';
 	$_SESSION['selCom'] = 'online';
 	$nbComPagination=$plxAdmin->nbComments('online');
 	$h2 = '<h2>'.L_COMMENTS_ONLINE_LIST.'</h2>';
 }
 elseif($comSel=='offline') {
-	$comSelMotif = '/^_[0-9]{4}.(.*).xml$/';
+	$comSelMotif = '/^_\d{4}.(.*).xml$/';
 	$_SESSION['selCom'] = 'offline';
 	$nbComPagination=$plxAdmin->nbComments('offline');
 	$h2 = '<h2>'.L_COMMENTS_OFFLINE_LIST.'</h2>';
 }
 elseif($comSel=='all') { // all
-	$comSelMotif = '/^[[:punct:]]?[0-9]{4}.(.*).xml$/';
+	$comSelMotif = '/^[[:punct:]]?\d{4}.(.*).xml$/';
 	$_SESSION['selCom'] = 'all';
 	$nbComPagination=$plxAdmin->nbComments('all');
 	$h2 = '<h2>'.L_COMMENTS_ALL_LIST.'</h2>';
